# selene-experiments

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
tests/: test_google.py  test_native_selenium.py  test_selene.py
